fix(roleplay): P-0819-A 阶段转换守卫 + 角色分配去随机 + 搜证线索字段增强
ScriptController:
- present_discussion: 检查当前阶段是否为搜证，非搜证阶段返回错误
- start_voting: 检查当前阶段是否为讨论，非讨论阶段返回错误
- 两接口均返回 transitioned 字段标识是否真正转换

ScriptGameService:
- 新增 getPhase() 访问器
- 角色分配: 当 players 与 roles 完全一致时(选择页直传)不再 shuffle，保持身份一一对应
- 搜证结果: public_clues 和 clues 均补充 title/location 字段
- 已搜空地点: clues 字段仍返回公开线索(兼容旧 UI)

前端: React 重建部署(index-C5SCbsc6.js)
测试: ScriptGameServiceTest 新增阶段守卫测试